--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@
     position: relative;
     height: 100%;
     min-height: 500px;
-    background: linear-gradient(rgba(15, 23, 43, .1), rgba(15, 23, 43, .1)), url(../img/pexels-vince-2265876.jpg);
+    background: linear-gradient(rgba(15, 23, 43, .1), rgba(15, 23, 43, .1)), url(../pexels-vince-2265876.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -457,7 +457,7 @@ input[type="text"]::placeholder {
 
 /*** Hero Header ***/
 .hero-header {
-    background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(../img/hero-right.jpg);
+    background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(../hero-right.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
